# MAYA

./: .env.example  .gitignore  interactions.txt  logfile  main.py  main_old.py  main_old_2.py  pyproject.toml  requirements.txt  test.py  test_old.py
.dspy_cache/000/: cache.db
.dspy_cache/002/: cache.db
.dspy_cache/003/: cache.db
.dspy_cache/005/: cache.db
.dspy_cache/006/: cache.db
.dspy_cache/007/: cache.db
.dspy_cache/009/: cache.db
.dspy_cache/010/: cache.db
.dspy_cache/012/: cache.db
.dspy_cache/013/: cache.db
.dspy_cache/014/: cache.db
.dspy_cache/015/: cache.db
maya/: interactions.txt
maya-demo-main/: SPEECH_RECOGNITION_SETUP.md  package-lock.json  package.json  react-speech-recognition.d.ts
maya-demo-main/app/: globals.css  page copy 2.tsx  page copy.tsx  page.tsx
maya-demo-main/components/: animated-sphere.tsx  audio-visualizer.tsx  voice-controls.tsx
maya-demo-main/lib/: azure-tts.ts  speech-recognition-init.ts
maya/agents/: config.jsonl  config.py  tools.py
maya/agents/health_rag/: agent.py  agent_old.py  config.toml  state.py  test.py
maya/agents/health_rag_old/: agent.py  config.toml
maya/agents/phyxio_exercise_agent/: __init__.py  agent.py  bridge.py  phyxio_utils.py
maya/artifacts/latency_probe/: latency_results.txt
maya/framework/memory/: __init__.py
maya/framework/ontologies/: Users.llm.json  Users.rdf  UsersData.llm.json  UsersData.rdf  __init__.py  disambiguation_ontology.json  extractOnto.py  loader.py  renderer.py
maya/framework/rag/: __init__.py  build_index.py  corpus.py  vectorstore.py
maya/framework/supervisor/: factory.py  prompts.py  (+6 more)
maya/tests/: supervisor_test.ipynb
(+1 files in other folders)
