[project]
name = "maya"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-cognitiveservices-speech>=1.47.0",
    "chromadb>=1.3.4",
    "dspy>=3.0.3",
    "flask>=3.0.3",
    "langchain>=0.3.27",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "langgraph-checkpoint-postgres>=2.0.23",
    "langgraph-supervisor>=0.0.29",
    "langmem>=0.0.29",
    "numpy>=2.3.3",
    "openai>=1.107.2",
    "psycopg>=3.2.10",
    "pvporcupine>=3.0.5",
    "python-dotenv>=1.1.1",
    "sounddevice>=0.5.3",
    "soundfile>=0.13.1",
    "trustcall>=0.0.39",
    "webrtcvad>=2.0.10",
]

[project.scripts]
maya-supervisor = "maya.framework.supervisor.run:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
